--- a/views/register.jade
+++ b/views/register.jade
@@ -19,3 +19,5 @@ html
       button.btn.btn-default(type='submit') Submit
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
+    br
+    h4= info
