auto login after register

--- a/views/register.jade
+++ b/views/register.jade
@@ -17,6 +17,7 @@ html
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
       button.btn.btn-default(type='submit') Submit
+      &nbsp;
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
     br
