--- a/views/login.jade
+++ b/views/login.jade
@@ -17,5 +17,6 @@ html
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
       button.btn.btn-default(type='submit') Submit
+      &nbsp;
       a(href='/')
         button.btn.btn-primary(type="button") Cancel
